--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,12 @@ headers:
   User-Agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36"
   Accept-Language: "en-US,en;q=0.9"
 
+# Data saving format
+format: "csv"
+
+# File save location
+save_location: "data.csv"
+
 # Optional settings
 timeout: 10  # Request timeout (in seconds)
 retries: 3   # Number of retry attempts for failed requests
