Set up logging in util.py (used in main) and related config, removed deprecated fields from data_processor.py

--- a/config.yaml
+++ b/config.yaml
@@ -17,5 +17,6 @@ timeout: 10  # Request timeout (in seconds)
 retries: 3   # Number of retry attempts for failed requests
 delay: 2     # Delay between retries (in seconds)
 
-# Log level
+# Logging settings
 log_level: "INFO"
+log_file: "scraper.log"
