--- a/config.yaml
+++ b/config.yaml
@@ -6,17 +6,28 @@ headers:
   User-Agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36"
   Accept-Language: "en-US,en;q=0.9"
 
-# Data saving format
+# Data saving format and location
 format: "csv"
-
-# File save location
 save_location: "data.csv"
+
+# Retry logic settings
+retries:
+  max_retries: 3
+  backoff_factor: 2
+
+# Logging settings
+logging:
+  log_file: "scraper.log"
+  log_level: "INFO"
+
+# Missing data handling strategy
+missing_data_strategy: "fill_mean"  # Options: drop, fill_mean, fill_median
+
+# Visualization settings
+visualization_output: "./visualizations"
+plot_types:
+  - histogram
+  - bar_chart
 
 # Optional settings
 timeout: 10  # Request timeout (in seconds)
-retries: 3   # Number of retry attempts for failed requests
-delay: 2     # Delay between retries (in seconds)
-
-# Logging settings
-log_level: "INFO"
-log_file: "scraper.log"
